--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -33,7 +33,7 @@ title: The DLUHC Way
 
 The DLUHC Way guides teams to build and operate brilliant, cost-effective digital services.
 
-It documents the specific technology, tools and processes that Government Digital Service (DLUHC) teams use.
+It documents the specific technology, tools and processes that Department for Levelling Up, Housing and Communities (DLUHC) teams use.
 
 It's not intended as guidance for anyone working outside DLUHC - you'll find that in the [Service Manual](https://www.gov.uk/service-manual).
 
