--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -63,7 +63,7 @@ They must be [secure by design](https://www.security.gov.uk/guidance/secure-by-d
 
 ## How to add new guidance
 
-Contribute to this repository by making a pull request in [GitHub](https://github.com/alphagov/the-dluhc) for discussion at the DLUHC Way Forum.
+Contribute to this repository by making a pull request in [GitHub](https://github.com/communitiesuk/dluhc-way) for discussion at the DLUHC Way Forum.
 
 You can also read the service manual to find out about
 [learning about and writing user needs](https://www.gov.uk/service-manual/user-research/start-by-learning-user-needs).
