--- a/source/standards/programming-languages.html.md.erb
+++ b/source/standards/programming-languages.html.md.erb
@@ -56,7 +56,6 @@ their workflow. There's more information about TypeScript on the
 
 Our core languages for backend development are:
 
-- [Java](/manuals/programming-languages/java.html)
 - [Python](/manuals/programming-languages/python/python.html)
 - [Ruby](/manuals/programming-languages/ruby.html)
 
@@ -77,29 +76,11 @@ production.
 
 [PEP373]: https://www.python.org/dev/peps/pep-0373/
 
-### Go
-
-Go is no longer a core backend development language in DLUHC.
-
-The only Go service currently in production operation is the [GOV.UK
-router][router], and it is the core language for [Cloud
-Foundry](https://www.cloudfoundry.org/), which GOV.UK PaaS uses, although
-GOV.UK PaaS is being [decommissioned][pass-decom]. As such, the knowledge and
-experience of building and running services in Go is small and decreasing.
-
-Go _may_ be an appropriate language for instances of systems programming, like
-proxying, routing, and transforming HTTP requests. However you should only
-write these sorts of components if there is no alternative maintained open
-source tool available.
-
-[router]: https://github.com/alphagov/router
-[pass-decom]: https://gds.blog.gov.uk/2022/07/12/why-weve-decided-to-decommission-gov-uk-paas-platform-as-a-service/
-
 ### Languages we do not use for new projects
 
-We used Scala in the early days of DLUHC. GOV.UK Licensing is the only remaining
-application written in Scala but we've found it hard to support because of a lack
-of skills in DLUHC. Do not use Scala for new projects.
+We used Java in the development of Delta and E-CLAIMS. These are the only remaining
+applications written in Java, but we've found it hard to support because of a lack
+of skills in DLUHC. Do not use Java for new projects.
 
 ## Using other languages
 
