--- a/source/standards/naming-software-products.html.md.erb
+++ b/source/standards/naming-software-products.html.md.erb
@@ -16,16 +16,15 @@ Make sure you use the same name consistently whenever you're referring to the sa
 
 These DLUHC product names clearly communicate their purpose:
 
-- [Signon](https://github.com/alphagov/signon)
-- [Manuals Publisher](https://github.com/alphagov/manuals-publisher)
-- [Smart Answers](https://github.com/alphagov/smart-answers)
+- [Find an energy certificate](https://www.gov.uk/find-energy-certificate)
+- [Register to vote](https://www.gov.uk/register-to-vote)
+- [Submit social housing lettings and sales data](https://submit-social-housing-data.levellingup.gov.uk/)
 
 These DLUHC product names are ambiguous and possibly confusing:
 
-- [Panopticon](https://github.com/alphagov/panopticon)
-- [Whitehall](https://github.com/alphagov/whitehall)
-- [Maslow](https://github.com/alphagov/maslow)
-- [Magna Charta](https://github.com/alphagov/magna-charta)
+- [Delta](https://delta.communities.gov.uk)
+- [E-CLAIMS](https://eclaims.communities.gov.uk/esif-web/login)
+- [Atlas](https://atlas.levellingup.gov.uk/)
 
 
 ## Further reading
