--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -68,6 +68,9 @@ Contribute to this repository by making a pull request in [GitHub](https://githu
 You can also read the service manual to find out about
 [learning about and writing user needs](https://www.gov.uk/service-manual/user-research/start-by-learning-user-needs).
 
+You can also read the DLUHC intranet to find out about
+[writing useful and inclusive content for your users] (https://intranet.levellingup.gov.uk/task/content-design-guidance/).
+
 Thank you for your contributions as we develop this repository.
 
 ### Submission template
