--- a/source/manuals/accessibility.html.md.erb
+++ b/source/manuals/accessibility.html.md.erb
@@ -18,6 +18,7 @@ Further reading:
 - [legal accessibility requirements for government services](https://www.gov.uk/guidance/accessibility-requirements-for-public-sector-websites-and-apps)
 - [the equality act](https://www.gov.uk/guidance/equality-act-2010-guidance)
 - [understanding WCAG 2.2](https://www.gov.uk/service-manual/helping-people-to-use-your-service/understanding-wcag)
+- [accessibility checklist for your web content] (https://intranet.levellingup.gov.uk/task/content-design-guidance/accessibility/#chapter_head)
 
 ## How to make your service accessible
 
@@ -42,7 +43,7 @@ Automated accessibility testing tools are useful for finding issues, but [automa
 Popular tools for automated accessibility testing include:
 
 - [Axe](https://www.deque.com/axe/)
-- [Lighthouse](https://developers.google.com/web/tools/lighthouse/) (which uses Axe for its accessibility tests, and can be run from Chrome Devtools without the need for additional installation)
+- [Lighthouse](https://developers.google.com/web/tools/lighthouse/) (which uses Axe for its accessibility tests, and can be run from Edge or Chrome Devtools without the need for additional installation)
 - [WAVE](https://wave.webaim.org/)
 - [ARC Toolkit](https://www.tpgi.com/arc-platform/arc-toolkit/)
 
@@ -69,26 +70,6 @@ The Government Digital Service’s accessibility monitoring team has a publicly-
 
 The guide outlines some approaches for testing websites and applications against the [Web Content Accessibility Guidelines (WCAG)](https://www.w3.org/TR/WCAG/).
 
-#### Using Assistiv Labs to test with assistive technologies
-
-You can use [Assistiv Labs](https://assistivlabs.com/) to test your service with JAWS and NVDA.
-
-Contact the [Engineering Enablement team](https://sites.google.com/a/digital.cabinet-office.gov.uk/gds/directorates-and-groups/cto-and-ciso-office/engineering-enablement#h.f8vfqmbkqtgf) to request an account.
-
-We have been assured by Assistiv Labs that the Virtual Machine (VM) is deleted when you exit, however in the interests of security and to make sure we do not leak any personal data or sensitive material:
-
-- treat the VM you are using as if it was a shared device – like using a public computer in an internet cafe or library
-- do not use it to test any confidential or secret service, or services containing content that is considered sensitive
-- do not use any credentials from live systems with access to "real data" during your testing
-- do not sign in to any accounts, unless those accounts are used solely for the purposes of testing (for example, a test account in an integration or staging environment)
-- make configuration changes to the system through your own device rather than the VM
-
-You should also make sure you understand how using Assistiv Labs affects any other requirements for your service, such as PCI (Payment Card Industry) compliance, and assess any additional risks. You can speak to your service’s information assurance lead or the DLUHC Privacy Team for specific guidance.
-
-#### Testing in an accessibility lab
-
-You can test your service using an [accessibility lab](https://gds.blog.gov.uk/2018/06/20/creating-the-uk-governments-accessibility-empathy-lab/), such as the one in the DLUHC London office. The lab contains devices with assistive technologies installed for testing, including Dragon, which is not available through Assistiv Labs. It also provides some simulations of using the web with accessibility issues, so developers can better understand what this is like.
-
 ### Test content served by third party systems
 
 If a service is built using an existing or third party system, such as a content management system or JavaScript framework, it should be tested for accessibility. Accessibility compliance cannot be guaranteed by any system, as even small changes can introduce accessibility barriers.
@@ -98,6 +79,12 @@ If a service is built using an existing or third party system, such as a content
 Services should be tested by real users to evaluate how accessible they are. This can be with members of the public as well as specialist organisations who provide accessibility testing services.
 
 Testing with real users can be a time consuming process. It is recommended that this is done only after other accessibility testing takes place.
+
+#### Undertaking an accessibility audit
+
+You can use a contract with the [Digital Accessibility Centre](https://www.digitalaccessibilitycentre.org/) to test and audit your service for accessibility.
+
+Contact the [Digital Front Door team](https://intranet.levellingup.gov.uk/task/digital-and-web-publishing-services/) to use this contract.
 
 ### Use the GOV.UK Design System
 
