--- a/source/standards/threat-modelling.html.md.erb
+++ b/source/standards/threat-modelling.html.md.erb
@@ -27,9 +27,9 @@ The best time to perform threat modelling activities is during the design phase;
 however, it can be done anytime and should become a continuous process in your
 service team.
 
-Within the Cabinet Office, the [Cyber Security Team](https://sites.google.com/cabinetoffice.gov.uk/cybersecurity/our-services/threat-modelling) can support you with threat modelling your service, as well as advising you should you decide to carry it out yourself or through a third party. 
+Within DLUHC, the Cyber Security Team can support you with threat modelling your service, as well as advising you should you decide to carry it out yourself or through a third party. 
 
-Within the Cabinet Office and DLUHC, we follow the [Threat Modeling Manifesto][]'s
+Within DLUHC, we follow the [Threat Modeling Manifesto][]'s
 four questions:
 
 1. What are we working on?
@@ -65,7 +65,7 @@ aspects and make sure we get a rounded view of all threats.
 The purpose of this exercise is to talk through the service, architecture or the
 user journey with the people in the session, allowing for questions and answers.
 
-Remotely, digital whiteboard software, such as [Jamboard][], [Mural][],
+Remotely, digital whiteboard software, such as [Mural][],
 can be used to add virtual post-its on top of the digital diagrams.
 Make sure the tools are accessible so all colleagues can participate and ensure
 access control is sufficient as the diagrams will likely be at least
