--- a/source/standards/source-code/index.html.md.erb
+++ b/source/standards/source-code/index.html.md.erb
@@ -13,7 +13,7 @@ At DLUHC, we follow the principles set out in the Service Manual for managing th
 
 ## Publish open source code
 
-Wherever possible, we make our source code open and reusable. This means other government departments and people in outside organisations can benefit from our work. We also maintain several open source projects developed for use on GOV.UK and with other work we do, such as [GOV.UK Frontend][].
+Wherever possible, we make our source code open and reusable. This means other government departments and people in outside organisations can benefit from our work.
 
 It’s not always appropriate to open code. There are sometimes grounds for [keeping some data and code closed][], for example:
 
