--- a/source/standards/pull-requests.html.md.erb
+++ b/source/standards/pull-requests.html.md.erb
@@ -27,7 +27,7 @@ You do not need to merge all changes for a piece of work in a single PR. You sho
 
 ## Guidance for each step
 
-Feel free to ask for help on Slack (for example, [#tech-community](https://gds.slack.com/archives/CACV4GHCL)) if you are unsure how to do any of these things.
+Feel free to ask for help on Slack (for example, [#com-developers](https://communities-govuk.slack.com/archives/CH4UQAG10)) if you are unsure how to do any of these things.
 
 ### Opening a pull request
 
@@ -35,7 +35,7 @@ You should make sure that:
 
 - your local repository has the most recent changes on the target branch
 - the title and description of the PR are clear and accurately represent your changes
-- the title and description reference the source of the change, which could be a Zendesk ticket or a Jira card
+- the title and description reference the source of the change, which could be a Jira card
 - the description contains links to any related PRs
 - any screenshots have text descriptions for accessibility
 - any contentious changes or side effects have clear descriptions of the pros and cons
