--- a/source/standards/hosting.html.md.erb
+++ b/source/standards/hosting.html.md.erb
@@ -6,9 +6,9 @@ review_in: 6 months
 
 # <%= current_page.data.title %>
 
-In DLUHC, we use [Amazon Web Services (AWS)](https://aws.amazon.com) to host our services.
+In DLUHC, we use [Amazon Web Services (AWS)](https://aws.amazon.com) and [Microsoft Azure] (https://azure.microsoft.com/en-gb) to host our services.
 
-We follow the [Government Cloud First policy](https://www.gov.uk/guidance/government-cloud-first-policy) and use AWS managed cloud services and Infrastructure as a Service (IaaS) solutions to host our services rather than using our own hardware.
+We follow the [Government Cloud First policy](https://www.gov.uk/guidance/government-cloud-first-policy) and use AWS and Azure managed cloud services and Infrastructure as a Service (IaaS) solutions to host our services rather than using our own hardware.
 
 ## See also
 
