--- a/source/standards/programming-languages.html.md.erb
+++ b/source/standards/programming-languages.html.md.erb
@@ -79,18 +79,7 @@ production.
 
 ### Go
 
-Go is no longer a core backend development language in DLUHC.
-
-The only Go service currently in production operation is the [GOV.UK
-router][router], and it is the core language for [Cloud
-Foundry](https://www.cloudfoundry.org/), which GOV.UK PaaS uses, although
-GOV.UK PaaS is being [decommissioned][pass-decom]. As such, the knowledge and
-experience of building and running services in Go is small and decreasing.
-
-Go _may_ be an appropriate language for instances of systems programming, like
-proxying, routing, and transforming HTTP requests. However you should only
-write these sorts of components if there is no alternative maintained open
-source tool available.
+TO DO: Delete me
 
 [router]: https://github.com/alphagov/router
 [pass-decom]: https://gds.blog.gov.uk/2022/07/12/why-weve-decided-to-decommission-gov-uk-paas-platform-as-a-service/
