--- a/source/standards/dns-hosting.html.md.erb
+++ b/source/standards/dns-hosting.html.md.erb
@@ -6,9 +6,10 @@ review_in: 12 months
 
 # <%= current_page.data.title %>
 
-To ensure users can connect to your service, you'll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers.
+To ensure users can connect to your service, you'll need accurate Domain Name System (DNS) records and a DNS provider to supply your DNS nameservers. In DLUHC,
+we use CloudFlare as our DNS provider. 
 
-You can find information on choosing where to host your DNS and how to request nameserver delegation at DLUHC in the [Service Manual][].
+To create, update or delete DNS records you will need to make a request in DLUHC to ServiceNow.
 
 As part of your DNS strategy and planning you need to ensure:
 
@@ -19,11 +20,6 @@ For example, `publishing.service.gov.uk` is published to both Amazon Route 53 an
 This means that even if AWS has a total outage, users can access parts of GOV.UK by using Google Cloud DNS to resolve addresses, and viewing content that is available in the CDN cache.
 
 Note that if your service availability relies on a single vendor, there is less benefit to deploying DNS to multiple vendors.
-
-When you implement your DNS strategy you should consider using:
-
-* [Amazon Route 53][] as a cloud DNS web service
-* [Google Cloud DNS][] for high nameserver availability
 
 You can read more about [service domains and DNS][] in the Service Manual.
 
